tests/bad/lexer1.oc
/// fail: Cannot use a type name as an expression

def main() {
    let x: i32 = bool
}
